# httpfs-sync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yaml
httpfs-sync/: core.py  file.py  util.py
httpfs_sync/: core.py  file.py  util.py
httpfs_sync/tests/: test_spec.py
